# A2A-Udemy-Course

./: .env.example  .gitignore  README.md  pyproject.toml
01_Message/: server.py  test_agent.sh
02_Transports/: client.py  server_grpc.py  server_jsonrpc.py  server_rest.py
02_Transports_Discovery/: client.py  server_grpc.py  server_jsonrpc.py  server_rest.py  shared.py
03_Task_Lifecycle/: client.py  server.py
03_Tasks/: server.py
03_Tasks_Basics/: README.md  client.py  server_rest.py
04_Configuration/: client.py  server.py
04_Polling/: server.py
05_Polling/: client.py
05_Streaming/: client.py
05_StructuredData/: client.py  server.py
06_FileExchange/: client_bytes.py  client_uri.py  download.txt  file_server.py  server_bytes.py  server_uri.py
07_MultiTurn_Context/: client.py  server.py
07_Polling/: client.py  server.py
08_ListTasks/: client.py  server.py
08_Streaming/: client.py  server.py
09_MultiTurn_Context/: client.py  server.py
09_PushNotifications/: client.py  server.py  webhook_server.py
09_Resubscribe/: client.py  server.py
10_CancelTasks/: client.py  server.py
10_ListTasks/: client.py  server.py
10_PushNotifications/: client.py  server.py  webhook_server.py
11_MultiTurn_Context/: client.py  server.py
11_PushNotifications/: client.py  server.py  webhook_server.py
11_Resubscribe/: client.py  server.py
12_CancelTasks/: client.py  server.py
12_ListTasks/: client.py  operator_client.py  server.py  user_client.py
13_CancelTasks/: client.py  server.py
13_Resubscribe/: client.py
14_ErrorHandling/: client.py  (+1 more)
(+28 files in other folders)
